Fixing up some spacing issues.

--- a/client/styles/base.less
+++ b/client/styles/base.less
@@ -90,7 +90,6 @@ body {
   margin-bottom: 2*@baseSpacing;
 
   .title {
-    margin-left: @baseSpacing;
 
     h1 {
       margin-top: 0;
