--- a/client/styles/filetree.less
+++ b/client/styles/filetree.less
@@ -1,5 +1,8 @@
 @import "base.less";
 
+#leftColumn {
+}
+
 #projectName {
   margin-bottom: @baseSpacing;
 }
